# Scanfiler

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
samples/: config.yaml  generate_samples.py
samples/inbox/: SCAN00002.docx
scanfiler/: __init__.py  apply.py  cli.py  config.py  ledger.py  lock.py  naming.py  pipeline.py  proposals.py  runlog.py  self_update.py  templates.py
scanfiler/ai/: __init__.py  client.py  prompt.py  schema.py
scanfiler/extract/: __init__.py  docx.py  image.py  pdf.py
systemd/: scanfiler.service  scanfiler.timer
tests/: conftest.py  test_apply.py  test_cli.py  test_client.py  test_config.py  test_extract.py  test_ledger.py  test_lock.py  test_logging.py  test_naming.py  test_pipeline.py  test_pipeline_edges.py  test_proposals.py  test_runlog.py  test_schema.py  test_self_update.py
