[project]
name = "scanfiler"
version = "0.1.0"
description = "AI-powered document renamer / reorganizer for scanned-document dumps"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "Pillow>=10.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
scanfiler = "scanfiler.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scanfiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
