[project]
name = "scanfiler"
version = "0.1.0"
description = "AI-powered document renamer / reorganizer for scanned-document dumps"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "Pillow>=10.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "build>=1.2",
]

[project.scripts]
scanfiler = "scanfiler.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scanfiler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scanfiler --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
    "scanfiler/__main__.py",   # thin `python -m scanfiler` shim
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise SystemExit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B904"]  # allow `raise ... ` without `from` in retry/validation paths
